# pydantic-framework

./: README.md  gemini_agent.py  main.py  mcp_server.py  ollama_agent.py  pydantic_mcp.py  pyproject.toml  test.ipynb  tools.py  totorial.ipynb  with_ollama.ipynb
.ipynb_checkpoints/: mcp_server-checkpoint.py  pyproject-checkpoint.toml
